--- a/collect-boot/src/main/resources/static/css/lj/index.css
+++ b/collect-boot/src/main/resources/static/css/lj/index.css
@@ -14,10 +14,11 @@ body {
 
 #Div2 {
     width: 100%;
+    height: 100%;
+    line-height: 85px;
     text-align: center;
     font-size: 42px;
     color: #009688;
-    padding: 13px 0px 13px 0px;
     background-color: #23262E;
 }
 
