--- a/collect-boot/src/main/resources/static/css/lj/index.css
+++ b/collect-boot/src/main/resources/static/css/lj/index.css
@@ -179,19 +179,9 @@ input:-webkit-autofill {
     cursor: pointer;
 }
 
-.span2 {
-    display: inline-block;
-    padding: 9px 0px 9px 15px;
-    font-weight: 400;
-    line-height: 20px;
-}
 
-.span3 {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 20px;
-    color: #3f93d6;
-}
+
+
 
 #LeftItem1 {
     background-color: rgb(78, 84, 101);
@@ -218,6 +208,14 @@ input:-webkit-autofill {
     cursor: pointer;
 }
 #LeftItem3 {
+    background-color: #393D49;
+    display: inline-block;
+    color: rgba(255, 255, 255, .7);
+    height: 47px;
+    cursor: pointer;
+}
+
+#LeftItem4 {
     background-color: #393D49;
     display: inline-block;
     color: rgba(255, 255, 255, .7);
